Mudança nas imagens (webp para jpg)

--- a/meu-site/m4-sherman.html
+++ b/meu-site/m4-sherman.html
@@ -46,9 +46,9 @@
         <p>Em 1944, os Estados Unidos produziram 254 M4A3E2 Sherman "Jumbo", que possuía uma blindagem frontal espessa de 100mm no chassi e 75mm na torre e, portanto, o M4 Sherman mais blindado produzido.</p>
         <abbr title="M4A6 Sherman">
             <picture>
-                <source media="(max-width: 350px)" srcset="imagens/M4A6_Sherman-250.webp" type="image/webp">
-                <source media="(max-width: 540px)" srcset="imagens/M4A6_Sherman-300.webp" type="image/webp">
-                <img src="imagens/M4A6_Sherman-500.webp" alt="Imagem do M4A6" id="img">
+                <source media="(max-width: 350px)" srcset="imagens/M4A6_Sherman-250.jpg" type="image/jpeg">
+                <source media="(max-width: 540px)" srcset="imagens/M4A6_Sherman-300.jpg" type="image/jpeg">
+                <img src="imagens/M4A6_Sherman-500.jpg" alt="Imagem do M4A6" id="img">
             </picture>
         </abbr><p class="img">M4A6 Sherman</p><br>
         <abbr title="M4A3E2 Sherman">
@@ -77,9 +77,9 @@
         </ul><br>
         <abbr title="Interior do M4">
             <picture>
-                <source media="(max-width: 350px)" srcset="imagens/sherman-interior-250.webp" type="image/webp">
-                <source media="(max-width: 540px)" srcset="imagens/sherman-interior-300.webp" type="image/webp">
-                <img src="imagens/sherman-interior-500.webp" alt="Imagem do interior do M4 sherman">
+                <source media="(max-width: 350px)" srcset="imagens/sherman-interior-250.jpg" type="image/jpeg">
+                <source media="(max-width: 540px)" srcset="imagens/sherman-interior-300.jpg" type="image/jpeg">
+                <img src="imagens/sherman-interior-500.jpg" alt="Imagem do interior do M4 sherman">
             </picture>
         </abbr><p class="img">Interior da torre M4</p>
         <hr><h2>Atuações</h2><hr>
