Alteração na página do tiger1

--- a/meu-site/tiger1.html
+++ b/meu-site/tiger1.html
@@ -19,7 +19,7 @@
     <main>
         <h1>Tiger I</h1><hr>
         <h2>Criação</h2><hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, iste. Perferendis, cum fugiat. Beatae, perferendis unde et laudantium magnam ipsa commodi? Labore similique suscipit explicabo consequatur accusamus commodi voluptates obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio possimus facere provident soluta hic animi tempore alias. Alias enim maxime laudantium tempore, expedita, ab nostrum eligendi, placeat eaque sit atque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sint, fuga laboriosam deserunt exercitationem quaerat rem illum id, fugiat quibusdam iusto officiis recusandae architecto excepturi tempora totam possimus voluptates illo.</p>
+        <p><strong>[Não está finalizado]</strong></p>
     </main>
     <footer>
         &copy; Leandro Pessoa
