atualizações no meu site

--- a/meu-site/m4-sherman.html
+++ b/meu-site/m4-sherman.html
@@ -16,10 +16,10 @@
             </abbr>
         </a>
     </header>
-    <main>
+    <main class="page">
         <h1>M4 Sherman</h1><hr>
         <h2>Criação</h2><hr>
-        <p>O M4 Sherman foi criado pelos Estados Unidos durante a Segunda Guerra Mundial (WW2) no ano de 1940, vindo para substituir o M3 Lee, que possuía algumas limitações, como o seu tamanho elevadamente alto e seu canhão principal de 75mm que não girava em 360°.</p>
+        <p>O M4 Sherman foi <strong>criado pelos Estados Unidos</strong> durante a <a href="https://pt.wikipedia.org/wiki/Segunda_Guerra_Mundial" target="_blank" rel="external">Segunda Guerra Mundial (WW2)</a> no ano de 1940, vindo para substituir o M3 Lee, que possuía algumas limitações, como o seu tamanho elevadamente alto e seu canhão principal de 75mm que não girava em 360°.</p>
         <abbr title="M3 Lee">
             <picture>
                 <source media="(max-width: 350px)" srcset="imagens/m3-lee-250.jpg" type="image/jpeg">
@@ -28,10 +28,10 @@
             </picture>
         </abbr>
         <p class="img">M3 Lee</p>
-        <p>Foram criadas cerca de 50.000 unidades, que serviram diversos países na segunda guerra e em diversas outras posteriores, como a Guerra das Coréias, na década de 50.</p><hr>
+        <p>Foram criadas cerca de 50.000 unidades, que serviram diversos países na segunda guerra e em diversas outras posteriores, como a Guerra da Coréia, na década de 50.</p><hr>
         <h2>M4 Sherman na FEB</h2>
         <hr>
-        <p>Aproximadamente 80 serviram a Força Expedicionária Brasileira (FEB) na grande guerra, nas versões M4, M4A1 e M4 Composite Hull. Eles foram utilizados pelo Brasil até o final da década de 1960, quando começaram a ser substituídos gradativamente pelos M41 Walker Bulldog.</p>
+        <p>Aproximadamente 80 serviram a <a href="https://pt.wikipedia.org/wiki/For%C3%A7a_Expedicion%C3%A1ria_Brasileira" target="_blank" rel="external">Força Expedicionária Brasileira (FEB)</a> na grande guerra, nas versões M4, M4A1 e M4 Composite Hull. Eles foram utilizados pelo Brasil até o final da década de 1960, quando começaram a ser substituídos gradativamente pelos <a href="https://pt.wikipedia.org/wiki/M41_Walker_Bulldog" target="_blank" rel="external">M41 Walker Bulldog</a>.</p>
         <abbr title="M4s sendo utilizados pela FEB">
             <picture>
                 <source media="(max-width: 350px)" srcset="imagens/m4-feb-250.jpg" type="image/jpeg">
@@ -43,7 +43,7 @@
         <hr><h2>Versões</h2><hr>
         <p>Foram produzidas diversas versões (M4, M4A1, M4A2, M4A3, M4A4, M4A5 e M4A6) e, cada uma delas, possuía algumas características diferentes, à exemplo da versão M4A6, que tinha um chassi mais alongado.</p>
         <p>Além disso, versões de artilharia autopropulsadas, de transporte de tropas de socorro e caça-tanques também fizeram parte disso, principalmente da segunda guerra mundial.</p>
-        <p>Em 1944, os Estados Unidos produziram 254 M4A3E2 Sherman "Jumbo", que possuía uma blindagem frontal espessa de 100mm no chassi e 75mm na torre e, portanto, o M4 Sherman mais blindado produzido.</p>
+        <p>Em 1944, os Estados Unidos produziram 254 M4A3E2 Sherman "Jumbo", que possuía uma blindagem frontal espessa de 100mm no chassi e 75mm na torre e, portanto, o <strong>M4 Sherman mais blindado já produzido</strong>.</p>
         <abbr title="M4A6 Sherman">
             <picture>
                 <source media="(max-width: 350px)" srcset="imagens/M4A6_Sherman-250.jpg" type="image/jpeg">
@@ -59,14 +59,14 @@
             </picture>
         </abbr><p class="img">M4A3E2 Sherman</p><br>
         <hr><h2>Especificações</h2><hr>
-        <p>É um blindado de porte médio e blindagem frágil (na maioria das versões) de 50mm na frente, que permitia fáceis perfurações em seu casco. Era chamado de "Ronson" (uma marca de isqueiros), por causa da sua facilidade de ser incendiado ou até mesmo explodir. Ademais, vem equipado com um canhão principal de 75mm e, em alguns casos, com um maior de 105mm, que servia de apoio  à infantaria. Vinha também com uma metralhadora .50 e mais duas .30.</p>
+        <p>É um blindado de <strong>porte médio e blindagem frágil</strong> (na maioria das versões) de 50mm na frente, que permitia fáceis perfurações em seu casco. Era chamado de "Ronson" (uma marca de isqueiros), por causa da sua facilidade de ser incendiado ou até mesmo explodir. Ademais, vem equipado com um <strong>canhão principal de 75mm</strong> e, em alguns casos, com um maior de 105mm, que servia de apoio  à infantaria. Vinha também com uma metralhadora .50 e mais duas .30.</p>
         <ul>
             <li>Peso: 30.300 Kg</li>
             <li>Capacidade de combustível: 670 Litros</li>
             <li>Alcance operacional: 160 Km</li>
             <li>Velocidade máxima: 38 Km/h</li>
         </ul>
-        <p>O motor é um Continental R975 à gasolina e com a potência de 400cv (298Kw) a 2400rpm, nos modelos M4 ou M4A1.</p>
+        <p>O motor é um Continental R975 à gasolina e com a <strong>potência de 400cv</strong> (298Kw) a 2400rpm, nos modelos M4 e M4A1.</p>
         <p>Tinha espaço para 5 tripulantes:</p>
         <ul>
             <li>Comandante</li>
@@ -84,7 +84,7 @@
         </abbr><p class="img">Interior da torre M4</p>
         <hr><h2>Atuações</h2><hr>
         <p>Diversos blindados foram distribuídos para o Reino Unido, Canadá, Polônia, União Soviética, Brasil e China na segunda guerra.</p>
-        <p>Foi empregado primeiramente no norte da África em 1942, apoiando os britânicos que lá estavam. Na posse de britânicos, o primeiro confronto foi na segunda batalha de El Alamein em outubro desse mesmo ano contra panzers III e IV, houve perdas para ambos os lados.</p>
+        <p>Foi empregado primeiramente no norte da África em 1942, apoiando os britânicos que lá estavam. Na posse de britânicos, o primeiro confronto foi na <a href="https://pt.wikipedia.org/wiki/Segunda_Batalha_de_El_Alamein" target="_blank" rel="external">segunda batalha de El Alamein</a> em outubro desse mesmo ano contra panzers III e IV, houve perdas para ambos os lados.</p>
         <abbr title="Shermans na batalha de El Almein">
             <picture>
                 <source media="(max-width: 350px)" srcset="imagens/m4-elalmein-250.jpg" type="image/jpeg">
@@ -92,7 +92,7 @@
                 <img src="imagens/m4-elalmein-500.jpg" alt="Imagem de Shermans em El Almein">
             </picture><p class="img">Shermans na batalha de El Almein</p>
         </abbr>
-        <p>Os primeiros Shermans americanos a entrar em batalha atuaram na Operação Torch, na Tunísia, em novembro de 1942. Em 6 de dezembro, um pelotão foi perdido para outros blindados e canhões antitanque.</p>
+        <p>Os primeiros Shermans americanos a entrar em batalha atuaram na <a href="https://pt.wikipedia.org/wiki/Opera%C3%A7%C3%A3o_Tocha" target="_blank" rel="external">Operação Torch</a>, na Tunísia, em novembro de 1942. Em 6 de dezembro, um pelotão foi perdido para outros blindados e canhões antitanque.</p>
         <p>No pacífico, eles foram utilizados de maneira moderada, pois os terrenos eram mais complexos para blindados, com terrenos lamacentos, selvas densas e diversas ilhas, que dificultavam a locomoção entre as águas  que cortavam elas. Os confrontos eram contra blindados japoneses Ha-go, Chi-ha, Chi-nu e Chi-to.</p>
         <abbr title="M4 atravessando uma selva no pacífico">
             <picture>
@@ -101,7 +101,7 @@
                 <img src="imagens/m4-pacifico-500.jpg" alt="Imagem de um M4 atravessando uma selva do pacífico">
             </picture>
         </abbr><p class="img">M4 atravessando uma selva no pacífico</p>
-        <p>Atuou muito também na Guerra das Coréias na sua versão M4A3E8 Easy Eight no lado dos Estados Unidos contra os T-34-85 norte-coreanos, era querido pelos militares pela sua manobrabilidade e pela facilidade e confiabilidade na manutenção. Foi amplamente utilizado para fornecer apoio às tropas de infantaria, principalmente em terrenos altos e montanhas.</p>
+        <p>Atuou muito também na <a href="https://pt.wikipedia.org/wiki/Guerra_da_Coreia" target="_blank" rel="external">Guerra da Coréia</a> na sua versão M4A3E8 Easy Eight no lado dos Estados Unidos contra os T-34-85 norte-coreanos. Era querido pelos militares pela sua manobrabilidade e pela <strong>facilidade e confiabilidade na manutenção</strong>. Foi amplamente utilizado para fornecer apoio às tropas de infantaria, principalmente em terrenos altos e montanhas.</p>
         <hr><h2>Conclusão</h2><hr>
         <p>Por fim, o M4 Sherman tem muitos pontos fortes e fracos como a grande maioria dos tanques, era muito bom no apoio às tropas nos avanços, todavia não se dava bem contra outros blindados. Diversas unidades produzidas deram uma vantagem na segunda guerra e ainda serviram em outros confrontos, sendo utilizados até a década de 1980 em Israel. Percebe-se, portanto, que sua fácil usabilidade, manobrabilidade e confiabilidade permitiram sua longa vida nos mais diversos países no mundo.</p>
         <hr><h2>Vídeo</h2><hr>
