tópico atualizações no index

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -27,7 +27,13 @@
                     Tiger I
                 </article>
             </a>
-        </section>    
+        </section>
+        <section>
+            <h2>Atualizações</h2>
+            <ul id="atualizacoes">
+                <li>27/11/2022 às 23:10 - links e marcações na página do M4 Sherman</li>
+            </ul>
+        </section>
     </main>
     <footer>
         &copy; Leandro Pessoa
