--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -32,6 +32,7 @@
             <h2>Atualizações</h2>
             <ul id="atualizacoes">
                 <li>27/11/2022 às 23:10 - links e marcações na página do M4 Sherman</li>
+                <li>28/11/2022 às 00:10 - imagem de fundo</li>
             </ul>
         </section>
     </main>
