correção da imagem de fundo para celulares

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -33,6 +33,7 @@
             <ul id="atualizacoes">
                 <li>27/11/2022 às 23:10 - links e marcações na página do M4 Sherman</li>
                 <li>28/11/2022 às 00:10 - imagem de fundo</li>
+                <li>28/11/2022 às 00:30 - correção da imagem de fundo para dispositivos mobile</li>
             </ul>
         </section>
     </main>
