alteração no background-image

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -35,6 +35,7 @@
                 <li>28/11/2022 às 00:10 - imagem de fundo</li>
                 <li>28/11/2022 às 00:30 - correção da imagem de fundo para dispositivos mobile</li>
                 <li>28/11/2022 às 12:32 - nova imagem de fundo para dispositivos mobile</li>
+                <li>28/11/2022 às 14:01 - alteração no modo de exibição nos dispositivos mobile</li>
             </ul>
         </section>
     </main>
