--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -36,6 +36,7 @@
                 <li>28/11/2022 às 00:30 - correção da imagem de fundo para dispositivos mobile</li>
                 <li>28/11/2022 às 12:32 - nova imagem de fundo para dispositivos mobile</li>
                 <li>28/11/2022 às 14:01 - alteração no modo de exibição nos dispositivos mobile</li>
+                <li>28/11/2022 às 22:23 - <strong>página nova do Tiger I disponível</strong></li>
             </ul>
         </section>
     </main>
