--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -37,6 +37,7 @@
                 <li>28/11/2022 às 12:32 - nova imagem de fundo para dispositivos mobile</li>
                 <li>28/11/2022 às 14:01 - alteração no modo de exibição nos dispositivos mobile</li>
                 <li>28/11/2022 às 22:23 - <strong>página nova do Tiger I disponível</strong></li>
+                <li>28/11/2022 às 22:30 - correção na imagem do Tiger destruído em Leningrado</li>
             </ul>
         </section>
     </main>
