inserção do seletor do t-34 e início de sua página

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -23,8 +23,14 @@
             </a>
             <a href="tiger1.html" target="_self" rel="next">
                 <article class="selects">
-                    <img src="imagens/tiger1-200.png" alt="Imagem do blindado M4 Sherman">
+                    <img src="imagens/tiger1-200.png" alt="Imgaem do Tiger 1">
                     Tiger I
+                </article>
+            </a>
+            <a href="t-34.html" target="_self" rel="next">
+                <article class="selects">
+                    <img src="imagens/t-34-200x152t.png" alt="Imgaem do T-34">
+                    T-34
                 </article>
             </a>
         </section>
