imagens de fundo novas e abreviações na página do tiger 1

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -44,6 +44,7 @@
                 <li>28/11/2022 às 14:01 - alteração no modo de exibição nos dispositivos mobile</li>
                 <li>28/11/2022 às 22:23 - <strong>página nova do Tiger I disponível</strong></li>
                 <li>28/11/2022 às 22:30 - correção na imagem do Tiger destruído em Leningrado</li>
+                <li>29/11/2022 às 22:20 - imagens de fundo novas e abreviações na página do Tiger I</li>
             </ul>
         </section>
     </main>
