--- a/meu-site/m4-sherman.html
+++ b/meu-site/m4-sherman.html
@@ -7,6 +7,11 @@
     <title>Tanks</title>
     <link rel="stylesheet" href="listados.css">
     <link rel="shortcut icon" href="imagens/Tank-icon.png" type="image/x-icon">
+    <style>
+        body{
+            background-image: url('imagens/background-sherman-full.jpg');
+        }
+    </style>
 </head>
 <body>
     <header>
