--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -39,6 +39,7 @@
                 <li>28/11/2022 às 22:23 - <strong>página nova do Tiger I disponível</strong></li>
                 <li>28/11/2022 às 22:30 - correção na imagem do Tiger destruído em Leningrado</li>
                 <li>29/11/2022 às 22:20 - imagens de fundo novas e abreviações na página do Tiger I</li>
+                <li>30/11/2022 às 17:40 - correções nas abreviações/imagens na página do Tiger I</li>
             </ul>
         </section>
     </main>
