atualização no hub

--- a/hub/hub.html
+++ b/hub/hub.html
@@ -42,6 +42,10 @@
             background-image: linear-gradient(to right, #175289, transparent);
             border-radius: 10px;
         }
+        h3{
+            color: #1448c4;
+            padding: 10px;
+        }
         main{
             background-color: white;
             padding: 10px;
@@ -88,10 +92,16 @@
     <main>
         <section>
             <h2>Acesse aqui meus principais projetos:</h2>
+            <h3>HTML5 e CSS3</h3>
             <a href="https://leandro-pessoa.github.io/html-css/meu-site/index.html" target="_blank" rel="external"><div>Meu site (Conteúdo autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/html-css/desafios/desafio010 copy/desafio010.html" target="_blank" rel="external"><div>Projeto android (Conteúdo não autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/html-css/desafios/desafio012/desafio012.html" target="_blank" rel="external"><div>Projeto cordel (Conteúdo não autoral)</div></a>
             <a href="https://leandro-pessoa.github.io/html-css/desafios/desafio015/imagens/desafio015.html" target="_blank" rel="external"><div>Projeto redes sociais (Conteúdo não autoral)</div></a>
+            <h3>JavaScript</h3>
+            <a href="https://leandro-pessoa.github.io/js/notas/notas.html" target="_blank" rel="external"><div>Sistema básico de notas (Conteúdo autoral)</div></a>
+            <a href="https://leandro-pessoa.github.io/js/exerc%C3%ADcio7%20.1/exerc%C3%ADcio7.1.html" target="_blank" rel="external"><div>Analisador de números (Conteúdo não autoral)</div></a>
+            <a href="https://leandro-pessoa.github.io/js/d%C3%A9cimo7/d%C3%A9cimo7.html" target="_blank" rel="external"><div>Calculador de IMC (Conteúdo autoral)</div></a>
+            <a href="https://leandro-pessoa.github.io/js/Contador/contador.html" target="_blank" rel="external"><div>Contador (Conteúdo não autoral)</div></a>
         </section>
     </main>
     <footer>
