exercícios sobre formulários

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -27,6 +27,12 @@
                     Tiger I
                 </article>
             </a>
+            <!--<a href="t-34.html" target="_self" rel="next">
+                <article class="selects">
+                    <img src="imagens/t-34 (1).png" alt="Imgaem do Tiger 1">
+                    T-34
+                </article>
+            </a>-->
         </section>
         <section>
             <h2>Atualizações</h2>
