alteração no desafio 16

--- a/desafios/desafio016/desafio016.html
+++ b/desafios/desafio016/desafio016.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mobile.css" media="all">
     <link rel="stylesheet" href="demais.css">
 </head>
-<body>
+<body onresize="mudou()">
     <header>    
         <h1>Teste de media queries</h1>
         <div>
