--- a/desafios/desafio017/desafio017.html
+++ b/desafios/desafio017/desafio017.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <img src="imagens/pattern-500.jpg" alt="Imagem decorativa" id="pattern">
+        <div id="img"></div>
         <h1>Login</h1>
         <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         <form method="post" autocomplete="on">
