finalização do projeto login

--- a/desafios/desafio017/desafio017.html
+++ b/desafios/desafio017/desafio017.html
@@ -11,30 +11,34 @@
     <link rel="stylesheet" href="estilos/desktop.css">
 </head>
 <body>
-    <main>
-        <div id="img"></div>
-        <h1>Login</h1>
-        <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-        <form method="post" autocomplete="on">
-            <p class="input">
-                <img src="imagens/user.png" alt="Ícone de usuário">
-                <input type="email" name="email" id="iemail" required autocomplete="email" placeholder=" Insira seu e-mail"> 
-            </p>
-            <p class="input">
-                <img src="imagens/key.png" alt="Ícone de senha">
-                <input type="password" name="pass" id="ipass" required minlength="8" maxlength="15" autocomplete="current-password" placeholder=" Insira sua senha">
-            </p>
-            <p class="pbut">
-                <input type="submit" value="Entrar" class="button">
-            </p>
-            <p class="pbut">
-                <button class="button">
-                    Esqueci minha senha
-                    <img src="imagens/mail.png" alt="Ícone de e-mail" id="email">
-                </button>
-            </p>
-            <p id="cadastro">Não é cadastrado? <a href="#">Faça seu cadastro</a></p>
-        </form>
+    <main id="main">
+        <section id="img">
+            <div id="img"></div>
+        </section>
+        <section id="form">
+            <h1>Login</h1>
+            <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+            <form method="post" autocomplete="on">
+                <p class="input">
+                    <img src="imagens/user.png" alt="Ícone de usuário">
+                    <input type="email" name="email" id="iemail" required autocomplete="email" placeholder=" Insira seu e-mail">
+                </p>
+                <p class="input">
+                    <img src="imagens/key.png" alt="Ícone de senha">
+                    <input type="password" name="pass" id="ipass" required minlength="8" maxlength="15" autocomplete="current-password" placeholder=" Insira sua senha">
+                </p>
+                <p class="pbut">
+                    <input type="submit" value="Entrar" class="button">
+                </p>
+                <p class="pbut">
+                    <button class="button">
+                        Esqueci minha senha
+                        <img src="imagens/mail.png" alt="Ícone de e-mail" id="email">
+                    </button>
+                </p>
+                <p id="cadastro">Não é cadastrado? <a href="#">Faça seu cadastro</a></p>
+            </form>
+        </section>
     </main>
 </body>
 </html>
