--- a/desafios/desafio015/github.html
+++ b/desafios/desafio015/github.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <img src="pacote-d013/imagens/tela-youtube.png" alt="">
+        <img src="imagens/pacote-d013/imagens/tela-github.jpg" alt="">
         <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external"><div>Acesse</div></a>
     </main>
 </body>
