labels no projeto login

--- a/desafios/desafio017/desafio017.html
+++ b/desafios/desafio017/desafio017.html
@@ -20,11 +20,11 @@
             <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
             <form method="post" autocomplete="on">
                 <p class="input">
-                    <img src="imagens/user.png" alt="Ícone de usuário">
+                    <label for="iemail"><img src="imagens/user.png" alt="Ícone de usuário"></label>
                     <input type="email" name="email" id="iemail" required autocomplete="email" placeholder=" Insira seu e-mail">
                 </p>
                 <p class="input">
-                    <img src="imagens/key.png" alt="Ícone de senha">
+                    <label for="ipass"><img src="imagens/key.png" alt="Ícone de senha"></label>
                     <input type="password" name="pass" id="ipass" required minlength="8" maxlength="15" autocomplete="current-password" placeholder=" Insira sua senha">
                 </p>
                 <p class="pbut">
