meu site: adaptações para dispositivos menores

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanks</title>
     <link rel="shortcut icon" href="imagens/Tank-icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="listados.css">
+    <link rel="stylesheet" href="listados.css" media="all">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
     <header>
