--- a/meu-site/m4-sherman.html
+++ b/meu-site/m4-sherman.html
@@ -7,6 +7,7 @@
     <title>Tanks</title>
     <link rel="stylesheet" href="listados.css">
     <link rel="shortcut icon" href="imagens/Tank-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         body{
             background-image: url('imagens/background-sherman-full.jpg');
