--- a/meu-site/tiger1.html
+++ b/meu-site/tiger1.html
@@ -7,6 +7,7 @@
     <title>Tanks</title>
     <link rel="shortcut icon" href="imagens/Tank-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="listados.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         body{
             background-image: url('imagens/background-tiger1-1000.jpg');
@@ -46,7 +47,7 @@
         <h3>Outras</h3>
         <p>Mais duas outras variantes também foram fabricadas:</p>
         <ul>
-            <li>A primeira foi uma versão de demolidor de minas, construído por equipes de manutenção, em um esforço de limpar campos minados</li><br>
+            <li>A primeira foi uma versão de demolidor de minas, construído por equipes de manutenção, em um esforço de limpar campos minados</li>
             <li>Outra versão é o <a href="https://en.wikipedia.org/wiki/Bergetiger" target="_blank" rel="external">BergeTiger</a>, que era utilizado para recuperar outros blindados no campo de batalha</li>
         </ul>
         <abbr title="BergeTiger">
