inserção na lista de atualizações

--- a/meu-site/index.html
+++ b/meu-site/index.html
@@ -47,6 +47,7 @@
                 <li>28/11/2022 às 22:30 - correção na imagem do Tiger destruído em Leningrado</li>
                 <li>29/11/2022 às 22:20 - imagens de fundo novas e abreviações na página do Tiger I</li>
                 <li>30/11/2022 às 17:40 - correções nas abreviações/imagens na página do Tiger I</li>
+                <li>09/12/2022 às 13:52 - adaptações para dispositivos mobile</li>
             </ul>
         </section>
     </main>
